--- a/templates/landing.html
+++ b/templates/landing.html
@@ -33,7 +33,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <section id="home" class="hero-section" style="background-image: url('https://wallpapers.com/images/hd/high-resolution-blue-background-1920-x-1200-m6jsc5n5zpuxc7ev.jpg');">
+    <section id="home" class="hero-section" style="background-image: url('https://wallpapers.com/images/hd/high-resolution-blue-background-1920-x-1200-m6jsc5n5zpuxc7ev.jpg'); background-size: cover; background-position: center;">
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
